[package]
name = "imt"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "2.0.1"
bitflags = "2.10.0"
indexmap = "2.12.0"
lilium-sys = { git = "https://github.com/LiliumOS/lilium-sys", default-features = false }
tar = { version = "0.4.44", optional = true }

[features]
tar = ["dep:tar"]
